# Agent-Mailer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml  streamlit_app.py  streamlit_app1.py  streamlit_app2.py  streamlit_app3.py
backend/: check_schema.py  fix_db_schema.py  main.py
backend/core/: config.py  database.py  security.py
backend/graph/: chains.py  main.py  nodes.py  schemas.py  state.py  web_search_tool.py
backend/models/: generated_contents.py  job_descriptions.py  user.py
backend/routers/: auth.py  generation.py  users.py
backend/schemas/: auth.py  generation.py  jobs.py  user.py
backend/utils/: context_builder.py  email_sender.py  file_parser.py  password_hash.py  pdf_generator.py
frontend/: api.py  app.py  auth_utils.py  styles.css
frontend/.streamlit/: config.toml
frontend/pages/: 01_Login.py  02_Dashboard.py  03_Generator.py  04_Profile.py
graph/: chains.py  graph.py  nodes.py  schemas.py  state.py
tests/: repro_invalid_json.py  repro_issue.py  test_mixed_body.py
ui/: components.py
utils/: context_builder.py  email_sender_tool.py  file_parser.py  web_search_tool.py
